--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Radio Natural</title>
 </head>
+
 <body>
-    
+
+    <header>
+        <div class="contenedor">
+            <a href="./index.html" class="logo"><span class="d-sm-none">I</span>R<span class="mayus d-none d-sm-inline">ADIO</span>N<span class="mayus d-none d-sm-inline">ATURAL</span></a>
+            <div class="menu">
+                <nav>
+                    <ul>
+                        <li><a href="./index.html" class="item-nav">Inicio</a></li>
+                        <li><a href="./index.html#Radio" class="item-nav">Radio</a></li>
+                        <li><a href="./index.html#Sobre" class="item-nav">Sobre</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <i class="fa-solid fa-bars" id="icon_menu"></i>
+        </div>
+    </header>
+
+    <main>
+
+        <section class="primera">
+            <div class="primera-cont">
+                <div class="texto">
+                    <h1>Radio Natural Por El Bien Del Planeta.</h1>
+                    <p>Radio Natural Por El Bien Del Planeta En Este Canal Motivaremos A Nuestra Comunidad A Fomentar Hábitos Que Beneficien En La Limpieza Y Reciclaje De Material De Residuos Sólidos Urbanos Y Reducir El Material Contaminante Así Como Disminuir El Consumo De Material Desechable Que Tanto Perjudica A Nuestra Naturaleza.</p>
+                </div>
+                <button class="next-section"><a href="#test"><i class="bi bi-caret-down-fill"></i></a></button>
+            </div>
+        </section>	
+
+        <section class="radio">
+            
+        </section>
+
+    </main>
+
+    <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./js/script.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
+
 </html>
