--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     </button>
                 </div>
                 <div class="transmicion">
+                    	<!--listen2myradio.com SHOUTcast Flash Player-->
+	<p id='preview'></p><script id='myscript' language='javascript' src='http://flashplayer.listen2myradio.com/getInfo.js?id=16791ta4d7je2c9t6440d8l436o123'></script>
+	<!--End Player-->
                     <div class="imagen">
                         <img src="img/cover.jpg" alt="" class="img-fluid">
                     </div>
