Integracion de radio

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                     <div class="imagen">
                         <img src="img/cover.jpg" alt="" class="img-fluid">
                     </div>
+                    <!--listen2myradio.com SHOUTcast Flash Player-->
+	<p id='preview'></p><script id='myscript' language='javascript' src='http://flashplayer.listen2myradio.com/getInfo.js?id=974muk751pu8cnrbcns56f3ao3402'></script>
+	<!--End Player-->
                 </div>
             </div>
         </section>
