Integracion de radio

--- a/index.html
+++ b/index.html
@@ -69,15 +69,11 @@
                     </button>
                 </div>
                 <div class="transmicion">
-                    	<!--listen2myradio.com SHOUTcast Flash Player-->
-	<p id='preview'></p><script id='myscript' language='javascript' src='http://flashplayer.listen2myradio.com/getInfo.js?id=16791ta4d7je2c9t6440d8l436o123'></script>
-	<!--End Player-->
-                    <div class="imagen">
-                        <img src="img/cover.jpg" alt="" class="img-fluid">
-                    </div>
-                    <!--listen2myradio.com SHOUTcast Flash Player-->
-	<p id='preview'></p><script id='myscript' language='javascript' src='http://flashplayer.listen2myradio.com/getInfo.js?id=974muk751pu8cnrbcns56f3ao3402'></script>
-	<!--End Player-->
+                    <!--Flash Player-->
+                    <p id='preview'></p>
+                    <script id='myscript' language='javascript'
+                        src='http://flashplayer1.listen2myradio.com/getInfo.js?id=1000lqcnpd20vvr2pl7canmsui6ki2'></script>
+                    <!--End Player-->
                 </div>
             </div>
         </section>
@@ -113,8 +109,8 @@
                 <div class="footer-logo_wrapper">
                     <a href="/">
                         <a href="./index.html" class="logo text-white"><span class="d-sm-none">I</span>R<span
-                            class="mayus d-none d-sm-inline">ADIO</span>N<span
-                            class="mayus d-none d-sm-inline">ATURAL</span></a>
+                                class="mayus d-none d-sm-inline">ADIO</span>N<span
+                                class="mayus d-none d-sm-inline">ATURAL</span></a>
                     </a>
                 </div>
                 <nav class="main-navigation footer-navigation">
@@ -124,19 +120,24 @@
                                     href="index.html#inicio">Inicio</a></li>
                             <li
                                 class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-home menu-item-8">
-                                <a href="index.html#transmicion">Transmicion</a></li>
+                                <a href="index.html#transmicion">Transmicion</a>
+                            </li>
                             <li
                                 class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-home menu-item-9">
-                                <a href="index.html#galeria">Galeria</a></li>
+                                <a href="index.html#galeria">Galeria</a>
+                            </li>
                             <li
                                 class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-home menu-item-10">
-                                <a href="index.html#"><i class="bi bi-facebook icon-footer"></i></a></li>
+                                <a href="index.html#"><i class="bi bi-facebook icon-footer"></i></a>
+                            </li>
                             <li
                                 class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-home menu-item-11">
-                                <a href="index.html#"><i class="bi bi-whatsapp icon-footer"></i></a></li>
+                                <a href="index.html#"><i class="bi bi-whatsapp icon-footer"></i></a>
+                            </li>
                             <li
                                 class="header_btn menu-item menu-item-type-post_type menu-item-object-page menu-item-208">
-                                <a href="index.html#"><i class="bi bi-youtube icon-footer"></i></a></li>
+                                <a href="index.html#"><i class="bi bi-youtube icon-footer"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </nav>
