Integracion de radio

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                 <div class="transmicion">
                     <!--Flash Player-->
                     <p id='preview'></p>
-                    <script id='myscript' language='javascript'
-                        src='http://flashplayer1.listen2myradio.com/getInfo.js?id=1000lqcnpd20vvr2pl7canmsui6ki2'></script>
-                    <!--End Player-->
+                    <audio autoplay controls>
+                        <sourse src="http://207.244.66.85:4976/;.aac/;stream.nsv" type="audio/mpeg">
+                            </source>
                 </div>
             </div>
         </section>
