--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                     <!--Flash Player-->
                     <p id='preview'></p>
                     <audio autoplay controls>
-                        <sourse src="http://207.244.66.85:4976/;.aac/;stream.nsv" type="audio/mpeg">
-                            </source>
+                        <source src="http://207.244.66.85:4976/;.aac/;stream.nsv" type="audio/mpeg">
+                        </source>
                 </div>
             </div>
         </section>
