Integracion de radio

--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
                 <div class="transmicion">
                     <!--Flash Player-->
                     <p id='preview'></p>
-                    <audio autoplay controls>
-                        <source src="http://207.244.66.85:4976/;.aac/;stream.nsv" type="audio/mpeg">
-                        </source>
+                    <!-- <audio autoplay controls>
+                        <source src= type="audio/mpeg">
+                        </source> -->
+                    <audio autoplay controls src="http://207.244.66.85:4976/;.aac/;stream.nsv"></audio>
                 </div>
             </div>
         </section>
