Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <header>
         <div class="contenedor_header">
             <a href="">LOGO</a>
+            <a href="intent://com.android.chrome/#Intent;scheme=android-app;end" class="btn">
+        Abrir Ahora
+    </a>
             <nav>
                 <ul>
                     <li><a href="./index.html" class="item-nav">Inicio</a></li>
