Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 
     <h1>Abrir en Aplicación</h1>
     <p>Si la aplicación no se abre automáticamente, pulsa el botón de abajo.</p>
+    
+    <a href="intent://roberto12541.github.io/Icono-de-la-Radio-Natural/#Intent;scheme=https;package=com.android.chrome;end" class="btn">
+    Abrir en Chrome
+</a>
 
-    <a href="intent://com.android.chrome/#Intent;scheme=android-app;end" class="btn">
-        Abrir Ahora
-    </a>
 
 </body>
 </html>
